force-app/main/default/objects/Case/fields/Aceito__c.field-meta.xml
<CustomField>
    <fullName>Aceito__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Esse campo é apenas para pegar o Id do caso e bater com o Work Agent</description>
    <label>Aceito?</label>
    <type>Checkbox</type>
</CustomField>