force-app/main/default/objects/Case/fields/CA_AssistenteContas__c.field-meta.xml
<CustomField>
    <fullName>CA_AssistenteContas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistente de Contas</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>