force-app/main/default/objects/Case/fields/CA_Motivo__c.field-meta.xml
<CustomField>
    <fullName>CA_Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2ª via de boleto</fullName>
            </value>
            <value>
                <fullName>Comprovantes de pagamentos</fullName>
            </value>
            <value>
                <fullName>Dúvida sobre lançamentos</fullName>
            </value>
            <value>
                <fullName>Dúvidas sobre boleto Final</fullName>
            </value>
            <value>
                <fullName>Cadastrar débito em conta</fullName>
            </value>
            <value>
                <fullName>Excluir débito em conta</fullName>
            </value>
            <value>
                <fullName>2º via Extrato</fullName>
            </value>
            <value>
                <fullName>Dúvidas no extrato</fullName>
            </value>
            <value>
                <fullName>2º via Nota fiscal</fullName>
            </value>
            <value>
                <fullName>Informe de rendimentos</fullName>
            </value>
            <value>
                <fullName>Dúvidas/Ajustes no IR</fullName>
            </value>
            <value>
                <fullName>Dúvidas sobre IPTU</fullName>
            </value>
            <value>
                <fullName>Informações seguro complementar</fullName>
            </value>
            <value>
                <fullName>Inquilino inadimplente</fullName>
            </value>
            <value>
                <fullName>Aluguel não Recebido</fullName>
            </value>
            <value>
                <fullName>Solicitação de manutenção</fullName>
            </value>
            <value>
                <fullName>Reembolso de manutenção</fullName>
            </value>
            <value>
                <fullName>Assistência 24h</fullName>
            </value>
            <value>
                <fullName>Informações de desocupação</fullName>
            </value>
            <value>
                <fullName>Aviso de desocupação</fullName>
            </value>
            <value>
                <fullName>Devolução de chaves</fullName>
            </value>
            <value>
                <fullName>Cancelar processo de desocupação</fullName>
            </value>
            <value>
                <fullName>Agendamento de vistoria</fullName>
            </value>
            <value>
                <fullName>Cancelamento de vistoria</fullName>
            </value>
            <value>
                <fullName>Constestação de vistoria</fullName>
            </value>
            <value>
                <fullName>Dúvidas relatório de reparos</fullName>
            </value>
            <value>
                <fullName>Data de vistoria</fullName>
            </value>
            <value>
                <fullName>Participar de vistoria</fullName>
            </value>
            <value>
                <fullName>Resultado vistoria</fullName>
            </value>
            <value>
                <fullName>Atualizar dados cadastrais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>