force-app/main/default/objects/Case/fields/CA_SessaoMessaging__c.field-meta.xml
<CustomField>
    <fullName>CA_SessaoMessaging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sessão do Messaging</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>