force-app/main/default/objects/Case/fields/CA_Telefone__c.field-meta.xml
<CustomField>
    <fullName>CA_Telefone__c</fullName>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>