force-app/main/default/objects/Case/fields/CA_TelefoneComercial__c.field-meta.xml
<CustomField>
    <fullName>CA_TelefoneComercial__c</fullName>
    <label>Telefone Comercial</label>
    <type>Phone</type>
</CustomField>