force-app/main/default/objects/Case/fields/CA_TipoSolicitante__c.field-meta.xml
<CustomField>
    <fullName>CA_TipoSolicitante__c</fullName>
    <label>Tipo Solicitante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquilino</fullName>
            </value>
            <value>
                <fullName>Proprietário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>