force-app/main/default/objects/Case/fields/CA_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>CA_Whatsapp__c</fullName>
    <label>Whatsapp</label>
    <type>Phone</type>
</CustomField>