force-app/main/default/objects/Case/fields/Email_doProprietario_doImovel_doCaso__c.field-meta.xml
<CustomField>
    <fullName>Email_doProprietario_doImovel_doCaso__c</fullName>
    <description>Espelha o valor do campo &quot;CA_Email__c&quot; da conta do proprietário do imóvel atrelado a este caso</description>
    <formula>CA_Imovel__r.CA_ProprietarioImovel__r.CA_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email do Proprietário do Imóvel do Caso</label>
    <type>Text</type>
</CustomField>