force-app/main/default/objects/Case/fields/IM_situacao_do_imovel__c.field-meta.xml
<CustomField>
    <fullName>IM_situacao_do_imovel__c</fullName>
    <description>Espelha o valor do campo CA_Imovel__r.CA_SituacaoImovel__c</description>
    <formula>TEXT(CA_Imovel__r.CA_SituacaoImovel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Exibe a situação do imóvel atrelado a este caso</inlineHelpText>
    <label>Situação do imóvel</label>
    <type>Text</type>
</CustomField>