force-app/main/default/objects/Case/fields/IM_Tipologia_do_imovel__c.field-meta.xml
<CustomField>
    <fullName>IM_Tipologia_do_imovel__c</fullName>
    <description>Espelha e exibe o valor do campo CA_Tipologia__c do imóvel</description>
    <formula>CA_Imovel__r.CA_Tipologia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Exibe a tipologia do imóvel atrelado a este caso</inlineHelpText>
    <label>Tipologia do imóvel</label>
    <type>Text</type>
</CustomField>