force-app/main/default/objects/Case/fields/Nome_do_Proprietario_Texto__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Proprietario_Texto__c</fullName>
    <description>Retorna o nome completo do proprietário do caso.</description>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
    <label>Nome do Proprietário (Texto)</label>
    <type>Text</type>
</CustomField>