force-app/main/default/objects/Case/fields/Numero_de_Protocolo__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Protocolo__c</fullName>
    <displayFormat>{YYYY}{MM}{DD}{0000}</displayFormat>
    <label>Número de Protocolo</label>
    <type>AutoNumber</type>
</CustomField>