force-app/main/default/objects/Case/fields/Protocolo__c.field-meta.xml
<CustomField>
    <fullName>Protocolo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protocolo</label>
    <referenceTo>Protocolo__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>