force-app/main/default/objects/Case/fields/TME_Casos__c.field-meta.xml
<CustomField>
    <fullName>TME_Casos__c</fullName>
    <formula>( ClosedDate - CreatedDate ) * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TME Casos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>