force-app/main/default/objects/Case/recordTypes/CA_DesocupacaoVistoria.recordType-meta.xml
<RecordType>
    <fullName>CA_DesocupacaoVistoria</fullName>
    <active>true</active>
    <businessProcess>Padrão</businessProcess>
    <label>Desocupação e Vistoria</label>
</RecordType>