force-app/main/default/objects/Case/recordTypes/CA_GestaoContrato.recordType-meta.xml
<RecordType>
    <fullName>CA_GestaoContrato</fullName>
    <active>false</active>
    <businessProcess>Padrão</businessProcess>
    <label>Gestão Contrato</label>
</RecordType>