force-app/main/default/objects/Case/recordTypes/CA_Locacao.recordType-meta.xml
<RecordType>
    <fullName>CA_Locacao</fullName>
    <active>true</active>
    <businessProcess>Padrão</businessProcess>
    <label>Locação</label>
</RecordType>