force-app/main/default/objects/Case/recordTypes/CA_ManutencaoReparos.recordType-meta.xml
<RecordType>
    <fullName>CA_ManutencaoReparos</fullName>
    <active>false</active>
    <businessProcess>Padrão</businessProcess>
    <label>Manutenção e Reparos</label>
</RecordType>