force-app/main/default/objects/Case/recordTypes/CA_Negociacao.recordType-meta.xml
<RecordType>
    <fullName>CA_Negociacao</fullName>
    <active>false</active>
    <businessProcess>Padrão</businessProcess>
    <label>Negociação</label>
</RecordType>