force-app/main/default/objects/Case/recordTypes/CA_OutrosAssuntos.recordType-meta.xml
<RecordType>
    <fullName>CA_OutrosAssuntos</fullName>
    <active>false</active>
    <businessProcess>Padrão</businessProcess>
    <label>Outros Assuntos</label>
</RecordType>