force-app/main/default/objects/Case/recordTypes/CA_PagamentosFinanceiro.recordType-meta.xml
<RecordType>
    <fullName>CA_PagamentosFinanceiro</fullName>
    <active>false</active>
    <businessProcess>Padrão</businessProcess>
    <label>Pagamentos e Financeiro</label>
</RecordType>