force-app/main/default/objects/Case/listViews/C_pia_de_Casos_por_usu_rio_Nathali.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Casos_por_usu_rio_Nathali</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Finalizado</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Nathali</value>
    </filters>
    <label>Casos por usuário (Nathali)</label>
</ListView>