force-app/main/default/objects/Case/listViews/C_pia_de_Todos_os_Casos.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Todos_os_Casos</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED_DATE</field>
        <operation>equals</operation>
        <value>2/25/2026 12:00 AM</value>
    </filters>
    <label>Casos encerrados</label>
</ListView>