force-app/main/default/objects/Case/listViews/CA_AgendamentoVistoria_Case.listView-meta.xml
<ListView>
    <fullName>CA_AgendamentoVistoria_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Agendamento Vistoria</label>
    <queue>CA_AgendamentoVistoria</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>