force-app/main/default/objects/Case/listViews/CA_AssistenteContaCasos_Case.listView-meta.xml
<ListView>
    <fullName>CA_AssistenteContaCasos_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Assistente de Conta Casos</label>
    <queue>CA_AssistenteContaCasos</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>