force-app/main/default/objects/Case/listViews/CA_CobrancaAlugueisCasos_Case.listView-meta.xml
<ListView>
    <fullName>CA_CobrancaAlugueisCasos_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Cobrança Aluguéis Casos</label>
    <queue>CA_CobrancaAlugueisCasos</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>