force-app/main/default/objects/Case/listViews/CA_EncarteiradoCasos_Case.listView-meta.xml
<ListView>
    <fullName>CA_EncarteiradoCasos_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Encarteirado Casos</label>
    <queue>CA_EncarteiradoCasos</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>