force-app/main/default/objects/Case/listViews/CA_GestorContaCasos_Case.listView-meta.xml
<ListView>
    <fullName>CA_GestorContaCasos_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Gestor de Conta Casos</label>
    <queue>CA_GestorContaCasos</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>