force-app/main/default/objects/Case/listViews/CA_OperacaoDesocupacaoCasos_Case.listView-meta.xml
<ListView>
    <fullName>CA_OperacaoDesocupacaoCasos_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Operação Desocupação Casos</label>
    <queue>CA_OperacaoDesocupacaoCasos</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>