force-app/main/default/objects/Case/listViews/CA_OperacoesAdmFinanceiroCasos_Case.listView-meta.xml
<ListView>
    <fullName>CA_OperacoesAdmFinanceiroCasos_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Operações Adm Financeiro Casos</label>
    <queue>CA_OperacoesAdmFinanceiroCasos</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>