force-app/main/default/objects/Case/listViews/CA_RelacionamentoDesocupacaoCasos_Case.listView-meta.xml
<ListView>
    <fullName>CA_RelacionamentoDesocupacaoCasos_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Finalizado</value>
    </filters>
    <label>Relacionamento Desocupação Casos</label>
    <queue>CA_RelacionamentoDesocupacaoCasos</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>